fix: wonky scroll behavior after overflow change
We now use the window object to scroll instead of the body.

--- a/src/components/styles/_app-menu.css
+++ b/src/components/styles/_app-menu.css
@@ -18,10 +18,11 @@
 
 .app-menu__close-menu-area {
   display  : none;
-  position : absolute;
+  position : fixed;
   top      : 0;
-  width    : 100%;
-  height   : 100%;
+  left     : 0;
+  bottom   : 0;
+  right    : 0;
   z-index  : 8;
   &.--menu-open { display: block; }
 }
